# Leren

./: .clang-format  CMakeLists.txt  DureRobot.cpp  DureRobot.h  Exeptions.cpp  Exeptions.h  GoedkopeRobot.cpp  GoedkopeRobot.h  Positie.cpp  Positie.h  Robot.cpp  Robot.h  main.cpp
LERENOFZ/: LERENOFZ.sln
LERENOFZ/LERENOFZ/: LERENOFZ.vcxproj  LERENOFZ.vcxproj.filters
Swadp/abstractserver/: BlankPage.cpp  BlankPage.h  BlankPage.idl  BlankPage.xaml  Light.cpp  Light.h  Main.cpp  Switch.cpp  Switch.h  Switchable.cpp  Switchable.h  abstractserver.sln  abstractserver.vcxproj  abstractserver.vcxproj.filters
Swadp/oefenprogramma/: Observer.cpp  Observer.h  Subject.cpp  Subject.h  oefenprogramma.sln  oefenprogramma.vcxproj  oefenprogramma.vcxproj.filters
